# design-patterns-examples

./: README.md
Agile.Software.Development/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/abstract_factory/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/abstract_factory/doc/: abstract_factory.mdj
Architectural.And.Design.Patterns.Of.Software.Engineering/abstract_factory/src/: Makefile  (+20 more)
Architectural.And.Design.Patterns.Of.Software.Engineering/adapter/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/bridge/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/command/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/composite/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/decorator/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/facade/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/factory_method/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/iterator/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/mediator/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/object_pool/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/observer/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/pipeline/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/plugin/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/plugin/src/: CMakeLists.txt  Makefile  README.txt  client.cpp  dictionary_manager.h  dictionary_manager_linux.cpp  dictionary_manager_poco.cpp  dictionary_manager_win32.cpp  dictionary_set.h  i_dictionary.h  run.sh
Architectural.And.Design.Patterns.Of.Software.Engineering/plugin/src/dictionaries/: CMakeLists.txt  Makefile  german_english_dictionary.cpp  german_french_dictionary.cpp
Architectural.And.Design.Patterns.Of.Software.Engineering/proxy/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/role/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/singleton/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/state/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/strategy/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/template_method/: README.md
Architectural.And.Design.Patterns.Of.Software.Engineering/visitor/: README.md
Design.Patterns/: README.md
Design.Patterns.Modern.Cpp20/: README.md
Design.Patterns.Modern.Cpp20/code/Builder/fluent_builder/: CMakeLists.txt  main.cpp
Design.Patterns.Modern.Cpp20/code/Factories/functional_factory/: CMakeLists.txt  DrinkFactory.hpp  main.cpp
Design.Patterns.Modern.Cpp20/code/Factories/nested_factory/: CMakeLists.txt  Point2D.h  SolidWall.cpp  Wall.cpp  Wall.h  WallFactory.h  main.cpp
Design.Patterns.Modern.Cpp20/code/Observer/dependency_problems/: CMakeLists.txt  build_by_cmake.sh  main.cpp
Design.Patterns.Modern.Cpp20/code/Observer/observer_with_boost_signals2/: CMakeLists.txt  main.cpp
Design.Patterns.Modern.Cpp20/code/Prototype/ordinary_duplication/: CMakeLists.txt  main.cpp  main1.cpp  main2.cpp
Design.Patterns.Modern.Cpp20/code/Prototype/serialization/: CMakeLists.txt  Person.h  main.cpp
Design.Patterns.Modern.Cpp20/code/Singleton/classic_implementation/: CMakeLists.txt  capitals.txt  main.cpp
Design.Patterns.Modern.Cpp20/design-patterns/: README.md
Design.Patterns.Modern.Cpp20/design-patterns/creational/singleton/basic-singleton/: CMakeLists.txt  build_by_cmake.sh  main.cpp
Diagrammatize.Design.Pattern/: TODO.list
Diagrammatize.Design.Pattern/code/cxx/AbstractFactory/Sample/: CMakeLists.txt  main.cpp
Diagrammatize.Design.Pattern/code/cxx/AbstractFactory/Sample/factory/: Factory.cpp  Factory.hpp
Diagrammatize.Design.Pattern/code/cxx/AbstractFactory/Sample/listfactory/: ListLink.hpp  ListPage.cpp
Diagrammatize.Design.Pattern/code/cxx/AbstractFactory/Sample/tablefactory/: TableLink.hpp  TableTray.cpp
Diagrammatize.Design.Pattern/code/cxx/Command/A2/: CMakeLists.txt  Command.pro  Main.cpp  Main.hpp  MainWindow.cpp  MainWindow.hpp
Diagrammatize.Design.Pattern/code/cxx/Command/A2/command/: Command.cpp
Diagrammatize.Design.Pattern/code/cxx/Command/A2/drawer/: DrawCommand.hpp
Diagrammatize.Design.Pattern/code/cxx/Facade/Sample/: CMakeLists.txt  Makefile  main.cpp
Diagrammatize.Design.Pattern/code/cxx/Facade/Sample/pagemaker/: Database.hpp  HtmlWriter.cpp  PageMaker.cpp  PageMaker.hpp
Diagrammatize.Design.Pattern/code/cxx/Interpreter/Sample/: CMakeLists.txt  CommandListNode.cpp  CommandListNode.hpp  CommandNode.cpp  Context.hpp  Node.cpp  Node.hpp  ProgramNode.hpp
Diagrammatize.Design.Patterns/: README.md
Diagrammatize.Design.Patterns/code/: java
Diagrammatize.Design.Patterns/code/cxx/Interpreter/A1/: CMakeLists.txt
Diagrammatize.Design.Patterns/code/cxx/Interpreter/A1/language/: CommandNode.cpp  Context.cpp  ExecuteException.hpp  InterpreterFacade.cpp  InterpreterFacade.hpp  ProgramNode.cpp  RepeatCommandNode.cpp
Diagrammatize.Design.Patterns/code/cxx/Interpreter/A1/turtle/: TurtleCanvas.cpp  TurtleCanvas.hpp
Diagrammatize.Design.Patterns/code/cxx/Observer/A2/: CMakeLists.txt  DigitObserver.cpp  FrameObserver.cpp  Observer.pro
Diagrammatize.Design.Patterns/code/cxx/State/Sample/: CMakeLists.txt  DayState.cpp
Diagrammatize.Java.Mutlithreading.Design.Patterns/: README.md
Diagrammatize.Java.Mutlithreading.Design.Patterns/code/: java
Head.First.Design.Patterns/: README.md
Mastering.Python.Design.Patterns/: README.md
Python.Programming.With.Design.Patterns/cxx/chapter02/backup/Checkboxes/: CMakeLists.txt  Checkbox.hpp  widget.cpp
Python.Programming.With.Design.Patterns/cxx/chapter06/backup/SwimFactoryConsole/: Builder.h  CMakeLists.txt  StraightSeeding.h  TimedFinalEvent.h  main.cpp
Python.Programming.With.Design.Patterns/cxx/chapter10/Proto/: CMakeLists.txt  Proto.cpp
(+1352 files in other folders)
